fix for 0001201: Any Dev - Marketplace - button wrong color [https://mantis2.uat.melistechnology.fr/view.php?id=1201]

--- a/public/css/melis-market-place.css
+++ b/public/css/melis-market-place.css
@@ -1526,9 +1526,9 @@
     }
 }
 
-.melis-marketplace-product-action .fa-download {
+/* .melis-marketplace-product-action .fa-download {
     color: #72af46 !important;
-}
+} */
 
 .melis-marketplace-product-action:hover .fa-download {
     color: #fff !important;
